--- a/vignettes/apsimx.Rmd
+++ b/vignettes/apsimx.Rmd
@@ -170,7 +170,7 @@ It is recommended that you start by creating an .apsim(x) file using the GUI. In
 6. Read in and/or manipulate the results, possibly using 'read_apsim(x)'
 7. Perform visual and statistical analysis
 
-Another proposed more advanced workflow would involve calibrating or optimizing variables given observed data. This is considered for future development, but not a priority since this kind of task is very specific to a given project and they are unlikely to generalize well across a range of applications.
+Another proposed more advanced workflow would involve calibrating or optimizing variables given observed data. This is considered in more detail below.
 
 ## Wheat Example (APSIM-X)
 
@@ -480,14 +480,65 @@ aiu <- apsim_version(which = "inuse")
 
 **edit_apsimx_batch**: Uses APSIM-X built-in functionality to edit parameters. In testing, it is slower than the other 'edit_apsimx*' functions.
 
+# Parameter Optimization
+
+Often the simulations from a model like APSIM will not be close enough to the observed data. APSIM (Classic and Next Generation) are very complex models with many moving pieces and unexpected interactions among parameters. If you decide that you need to optimize parameters this is what I suggest:
+
+1. Why do you need to perform parameter optimization?
+
+2. Which parameters do you need to optimize?
+
+3. Are the observed measurements appropriate for the parameters you want to optimize?
+
+I like to emphasize here the importance of thinking deeply about whether parameter optimization is needed in a given application. Before you use an optimization routine consider the following:
+
+1. Did you control the quality of the weather data ('met' file)?
+
+2. Are the soil properties appropriate for the location being simulated?
+
+3. Is the management information accurate?
+
+Clearly, if there are any problems, issues or inaccuracies which are derived from these three sources of information, then calibrating or tweaking crop parameters to compensate for those errors will not result in a useful model. In concrete terms, as an example: Are you modifying the radition use efficiency parameter to compensate for incorrect planting date or fertilizer inputs? Running an optimization algorithm is easier than having to think hard about the scientific questions, the mechanisms and the structure of the model.
+
+Given this disclaimer, I provide simple functions which connect APSIM with optimization routines. These are  **optim_apsim** and **optim_apsimx**. These functions work for situations when the function being optimized is smooth (non-techincal comment: small changes in the outputs results in small changes in the output without big jumps or discontinuities) and the parameters being optimized are continuous. This is that both input parameters and outputs can take any real value.
+
+I have been testing them and they work as expected. This means that very often they give you the right answer to the wrong question! For example, the optimized value for a parameter might not be within a physical or biological meaningful range. Let's look at the arguments:
+
+## optim_apsim
+
+* file = .apsim file
+* src.dir = source directory. Should be the current directory for both this file and the crop file.
+* crop.file = typically something like 'Wheat.xml', 'Maize.xml' or similar. You should have also placed an 'ini' under the crop in in the .apsim file and point to this file.
+* parm.paths = character vector with the full path to the parameters to be optimized. This can be obtained by using **inspect_apsim** or **inspect_apsim_xml**. The length of the parameter vector should be equal to the number of parameters being optimized (sometimes less is more). For example:
+
+```{r inspect-apsimx-xml-maize}
+rue.pth <- inspect_apsim_xml("Maize75.xml", src.dir = extd.dir, parm = "rue")
+ext.pth <- inspect_apsim_xml("Maize75.xml", src.dir = extd.dir, parm = "y_extinct_coef")
+## To pass them to optim_apsim, combine them
+pp <- c(rue.pth, ext.pth)
+```
+Generates the paths for the radiation use efficiency and extinction coefficient paths. 
+
+* data = data frame with the observed measurement which will be compared to APSIM output. It is important that the names match. This is the names given in the output of an APSIM simulation should have the same names as the column names in this data frame so that they can be aligned. Only one observation is allowed per Date.
+
+* type = type of optimization. The default is to use **optim**. There is also a genetic algorithm (much slower) and other options can be added in the future (for example mcmc). 
+
+* weights = weights to apply when multiple variables are being optimized. See help file for more details.
+
+* index = the default is 'Date' this allows the alignment of APSIM output and observed measurements.
+
+* ... = additional arguments to be passed to **optim**. For example, you can include lower and upper bounds and change the optimization algorithm (in this case 'L-BFGS-B'). See **optim** help file and documentation.
+
+## optim_apsimx
+
+This function has a very similar structure to **optim_apsim**. The main difference is that at the moment it is required to supply the initial values for the parameters. It is also required to indicate whether each parameter is present in the 'replacement' component. As expalined before, use **inspect_apsimx** or **inspect_apsimx_replacement**.
+
 # To-Do
 
 * **inspect_apsimx_replacement** challenge this function with more complex
 examples. It has problems with 'manager' when replacements are present.
 
-* Add more tests using the 'CoverCrop example' (APSIM 'Classic'). This would be the motivation for writing a function for 'factorials'. 'edit_apsim_factorial'.
-
-* Include parameter estimation example
+* Include a parameter optimization worked example
 
 # Appendix
 
@@ -503,6 +554,7 @@ Files in 'inst/extdata' and how they are used (ordered alphabetically):
 * **maize-soybean-rotation.apsim**: example file with a maize and soybean rotation used in testing and in the 'inspect_apsim' file.
 * **maize-swim.apsim**: example file with the SWIM module for testing (test_apsim_swim.R).
 * **Maize.apsimx**: This file is needed for the vignette.
+* **Maize.csv**: This file is needed for the vignette.
 * **Maize.db**: This file is needed for the vignette.
 * **Maize.out**: This file is needed for the 'read_apsim' example.
 * **MaizeSoybean.apsimx**: This file is needed for the vignette and for testing in 'test_replacements.R'
@@ -510,6 +562,7 @@ Files in 'inst/extdata' and how they are used (ordered alphabetically):
 * **Millet.out/sum**: result from the Millet simulation. Used in the 'read_apsim' example.
 * **Soybean.apsimx**: Soybean example for APSIM-X. Used in 'test_replacements.R'.
 * **Wheat.apsimx**: This file is used in the vignette.
+* **Wheat.csv**: This file is used in the vignette.
 * **Wheat.db**: This file is used in the vignette.
 * **WheatRye.apsimx**: This file is used in 'test_replacements.R'.
 
