--- a/vignettes/optim-apsim.Rmd
+++ b/vignettes/optim-apsim.Rmd
@@ -160,7 +160,7 @@ pp2 <- "Wheat.Cultivars.USA.Yecora.BasePhyllochron"
 
 ## Running the optimization
 
-Once we have set up these pieces we can run the optimization. The main consideration is that it is almost always a good idea to set up lower and upper bounds on the parameters in terms how much higher and lower than the default values can they be. In a model such as APSIM usually plus or minus 50 percent is enough of a range and even a lower range can often suffice. Below these are included as 0.5 and 1.5. We also need to specify that these two parameters are in the 'replacements' part of the file because there are parameters which can be found in both the 'replacements' part and the main simulation section of an APSIM-X file.
+Once we have set up these pieces we can run the optimization. Here, the first argument is the name of the file, the second the directory where it is (*src.dir*), then the paths indicating the parameters to optimize, the observed data (*data*), the weighting method (here = *mean*), whether the parameters are in the replacement part of the simulation and the initial values.
 
 ```{r optim-apsimx, eval = FALSE}
 ## wop is for wheat optimization
@@ -170,8 +170,41 @@ wop <- optim_apsimx("Wheat-opt-ex.apsimx",
                     data = obsWheat, 
                     weights = "mean",
                     replacement = c(TRUE, TRUE),
-                    initial.values = c(1.2, 120),
-                    method = "L-BFGS-B",
-                    lower = c(0.5, 0.5),
-                    upper = c(1.5, 1.5))
+                    initial.values = c(1.2, 120))
 ```
+
+This optimization ran for about 7 minutes (on my laptop). This is the result:
+
+```{r load-wop, echo = FALSE}
+data("wheat-opt-ex", package = "apsimx")
+```
+
+```{r wop-result}
+wop
+```
+
+We can see that the optimized values are very close to the known values which were used to simulate the data. The known value for RUE was 1.5 $g \; MJ^{-1}$ and for BasePhyllochron it was 90 GDD.
+
+In addition, it is good practice to compute the Hessian matrix, since it provides information about standard errors and confidence intervals.
+
+```{r optim-apsimx-hessian, eval = FALSE}
+## wop is for wheat optimization
+wop.h <- optim_apsimx("Wheat-opt-ex.apsimx", 
+                      src.dir = extd.dir, 
+                      parm.paths = c(pp1, pp2),
+                      data = obsWheat, 
+                      weights = "mean",
+                      replacement = c(TRUE, TRUE),
+                      initial.values = c(1.2, 120),
+                      hessian = TRUE)
+```
+
+This ran for about 8 minutes and it allows for calculation of confidence intervals and standard errors.
+
+```{r wop-result-hessian}
+wop.h
+```
+
+### Additional considerations
+
+The main additional consideration is that it can be a good idea to set up lower and upper bounds on the parameters in terms of how much higher and lower than the default values can be. In a model such as APSIM usually plus or minus 50 percent is enough of a range and even a lower range can often suffice. These can be included as 0.5 and 1.5. With *optim* it is necessary to use method = "L-BFGS-B". There are also similar options when using **nloptr**. This package has many available algorithms to choose from with more modern implementations than the ones available in **optim**. However, one disadvantage of the **nloptr** function is that it does not seem to be able to compute the Hessian numerically. 
