--- a/vignettes/optim-apsim.Rmd
+++ b/vignettes/optim-apsim.Rmd
@@ -60,14 +60,15 @@ Generates the paths for the radiation use efficiency and extinction coefficient 
 
 * data = data frame with the observed measurement which will be compared to APSIM output. It is important that the names match. This is the names given in the output of an APSIM simulation should have the same names as the column names in this data frame so that they can be aligned. Only one observation is allowed per Date.
 
-* type = type of optimization. The default is to use **optim**. There is also a genetic algorithm (much slower) and other options can be added in the future (for example mcmc). 
+* type = type of optimization. The default is to use **optim**. It is also possible to use the **nloptr** package or **mcmc** via the **BayesianTools** package (as of version 1.958).
+
 * weights = weights to apply when multiple variables are being optimized. See help file for more details.
 
 * index = the default is 'Date' this allows the alignment of APSIM output and observed measurements.
 
 * parm.vector.index = some paths point to a vector of parameters, but sometimes only one element of that vector needs to be optimized. In this case provide the index for which element of the vector needs to be optimized. If some of the parameters need this index while others do not, include a zero for those parameter vectors which are not indexed. 
 
-* ... = additional arguments to be passed to **optim**. For example, you can include lower and upper bounds and change the optimization algorithm (in this case 'L-BFGS-B'). See **optim** help file and documentation.
+* ... = additional arguments to be passed to **optim**. For example, you can include lower and upper bounds and change the optimization algorithm (in this case 'L-BFGS-B'). See **optim** help file and documentation. Other options for either **nloptr** or **mcmc**.
 
 ## optim_apsimx
 
@@ -244,5 +245,5 @@ The main additional consideration is that it can be a good idea to set up lower 
 
 * One issue which I have not fully tracked down is an error which appears which indicates a conflict with disk I/O. Again, I need to check but this may be when trying to read and/or write an apsimx file which is also opened in the APSIM GUI application. It is possible that this issue goes away when the APSIM GUI is closed.
 
-* I'm not convinced that using the Hessian (in the way I'm doing it) produces accurate standard errors. It seems to work just fine when there is one variable and perhaps when there is no weighting applied, but it seems that it breaks down with multiple variables and weighting.
+* I'm not convinced that using the Hessian (in the way I'm doing it) produces accurate standard errors. It seems to work just fine when there is one variable and perhaps when there is no weighting applied, but it seems that it breaks down with multiple variables and weighting. The **mcmc** method should not have this problem, but it takes a long time to run.
 
