--- a/vignettes/optim-apsim.Rmd
+++ b/vignettes/optim-apsim.Rmd
@@ -51,6 +51,7 @@ I have been testing them and they work as expected. This means that very often t
 * parm.paths = character vector with the full path to the parameters to be optimized. This can be obtained by using **inspect_apsim** or **inspect_apsim_xml**. The length of the parameter vector should be equal to the number of parameters being optimized (sometimes less is more). For example:
 
 ```{r inspect-apsimx-xml-maize}
+extd.dir <- system.file("extdata", package = "apsimx")
 rue.pth <- inspect_apsim_xml("Maize75.xml", src.dir = extd.dir, parm = "rue")
 ext.pth <- inspect_apsim_xml("Maize75.xml", src.dir = extd.dir, parm = "y_extinct_coef")
 ## To pass them to optim_apsim, combine them
@@ -60,7 +61,7 @@ Generates the paths for the radiation use efficiency and extinction coefficient 
 
 * data = data frame with the observed measurement which will be compared to APSIM output. It is important that the names match. This is the names given in the output of an APSIM simulation should have the same names as the column names in this data frame so that they can be aligned. Only one observation is allowed per Date.
 
-* type = type of optimization. The default is to use **optim**. It is also possible to use the **nloptr** package or **mcmc** via the **BayesianTools** package (as of version 1.958).
+* type = type of optimization. The default is to use **optim**. It is also possible to use the **nloptr** package or **mcmc** via the **BayesianTools** package (as of version 1.959).
 
 * weights = weights to apply when multiple variables are being optimized. See help file for more details.
 
@@ -108,6 +109,7 @@ Notice that the names in the *obsWheat* data frame are identical to the names fr
 sim0 <- read.csv(file.path(extd.dir, "wheat-sim-b4-opt.csv"))
 sim0$Date <- as.Date(sim0$Date)
 ```
+
 ```{r sim0-wheat-sim, eval = FALSE}
 sim0 <- apsimx("Wheat-opt-ex.apsimx", src.dir = extd.dir, value = "report")
 ```
@@ -246,4 +248,3 @@ The main additional consideration is that it can be a good idea to set up lower 
 * One issue which I have not fully tracked down is an error which appears which indicates a conflict with disk I/O. Again, I need to check but this may be when trying to read and/or write an apsimx file which is also opened in the APSIM GUI application. It is possible that this issue goes away when the APSIM GUI is closed.
 
 * I'm not convinced that using the Hessian (in the way I'm doing it) produces accurate standard errors. It seems to work just fine when there is one variable and perhaps when there is no weighting applied, but it seems that it breaks down with multiple variables and weighting. The **mcmc** method should not have this problem, but it takes a long time to run.
-
